--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@ tr:nth-child(odd) {
   background-color: rgb(232, 230, 230);
 }
 th {
-  background-color: white;
+  background-color: white
 }
 .badge {
-  background-color: lightgray;
+  background-color: rgb(172, 172, 172);
+}
+div {
+  display:flex;
+  flex-wrap: wrap;
 }
